Creacion de vista - xml